--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "hugo-bin": "^0.41.0"
+  },
+  "hugo-bin": {
+    "buildTags": "extended"
   }
 }
