--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 baseURL = ""
 languageCode = "en-us"
-title = "GoCD Docs"
+title = "GoCD User Documentation"
 uglyUrls = true
 theme = "hugo-book"
 relativeURLs = true
