--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,3 +16,4 @@ relativeURLs = true
   # (Optional, default docs) Specify section of content to render as menu
   # You can also set value to "*" to render all sections to menu
   BookSection = "*"
+  currentBaseURL = "http://localhost:1313/current"
