Made the following changes: 1. Added logo above the menu - click redirect to gocd.org 2. Changed font to Open Sans 3. Added 20px padding above h1.h2,h3 4. Made h3 bold 5. Link text in body is now bold 6. Updated the visited link color to #94399e 7. Updated the aws-sdk gem to aws-sdk-s3 8. Added a 'Edit this page' link in the footer

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -17,3 +17,11 @@ relativeURLs = true
   # You can also set value to "*" to render all sections to menu
   BookSection = "*"
   currentBaseURL = "http://localhost:1313/current"
+
+  # Set source repository location.
+  # Used for 'Last Modified' and 'Edit this page' links.
+  BookRepo = "https://github.com/gocd/new-docs.gocd.org"
+
+  # Enable "Edit this page" links for 'doc' page type.
+  # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
+  BookEditPath = "edit/master/content"
