--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,6 +4,7 @@ title = "GoCD User Documentation"
 uglyUrls = true
 theme = "hugo-book"
 relativeURLs = true
+googleAnalytics = "UA-48357651-1"
 [params]
   # (Optional, default true) Show or hide table of contents globally
   # You can also specify this parameter per page in front matter
