--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,6 +5,8 @@ uglyUrls = true
 theme = "hugo-book"
 relativeURLs = true
 googleAnalytics = "UA-48357651-1"
+pygmentsCodefences = true
+
 [params]
   # (Optional, default true) Show or hide table of contents globally
   # You can also specify this parameter per page in front matter
